--- a/app/src/main/res/layout/activity_item_properties.xml
+++ b/app/src/main/res/layout/activity_item_properties.xml
@@ -43,17 +43,6 @@
 
         </RelativeLayout>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/uber_move_bold"
-        android:padding="10dp"
-        android:text="Update product:"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -230,6 +219,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
                 android:backgroundTint="@color/myColor"
                 style="@style/Widget.AppCompat.Button"
                 android:foreground="@drawable/ripple"
@@ -261,6 +251,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
+                android:background="@drawable/circle"
                 android:backgroundTint="@color/myColor"
                 style="@style/Widget.AppCompat.Button"
                 android:foreground="@drawable/ripple"
@@ -305,6 +296,7 @@
                     android:gravity="center"
                     android:text="Pick Image"
                     android:textColor="@color/white"
+                    android:background="@drawable/circle"
                     android:backgroundTint="@color/myColor"
                     style="@style/Widget.MaterialComponents.Button"/>
 
@@ -331,6 +323,8 @@
                 android:foreground="?attr/selectableItemBackground"
                 style="@style/Widget.MaterialComponents.Button"
                 android:text="@string/done"
+                android:textSize="16sp"
+                android:background="@drawable/circle"
                 android:backgroundTint="@color/myColor"
                 android:textColor="@color/white" />
 
