--- a/app/src/main/res/menu/orders.xml
+++ b/app/src/main/res/menu/orders.xml
@@ -4,11 +4,11 @@
 
     <item
         android:id="@+id/yourItems"
-        android:title="Your Items" />
+        android:title="My Products" />
 
     <item
         android:id="@+id/wallet"
-        android:title="Wallet" />
+        android:title="My Wallet" />
 
     <item
         android:id="@+id/logout"
