--- a/app/src/main/res/layout/activity_item_properties.xml
+++ b/app/src/main/res/layout/activity_item_properties.xml
@@ -211,18 +211,16 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/tvFrom"
                 android:layout_width="70dp"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
                 android:backgroundTint="@color/myColor"
-                style="@style/Widget.AppCompat.Button"
-                android:foreground="@drawable/ripple"
+                app:cornerRadius="50dp"
                 android:text="@string/From"
                 android:textColor="@color/white" />
 
@@ -234,27 +232,23 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/myColor"
                 android:gravity="center"
                 android:padding="10dp"
                 android:singleLine="true"
                 android:text="@string/To"
                 android:textColor="@color/white"
-                android:textCursorDrawable="@drawable/cursor_color"
                 android:textSize="16sp" />
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/tvTo"
                 android:layout_width="70dp"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/circle"
                 android:backgroundTint="@color/myColor"
-                style="@style/Widget.AppCompat.Button"
-                android:foreground="@drawable/ripple"
+                app:cornerRadius="50dp"
                 android:text="@string/From"
                 android:textColor="@color/white" />
 
@@ -269,17 +263,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/etItemImage"
                 android:layout_width="160dp"
                 android:layout_height="130dp"
-                android:scaleType="fitXY"
+                android:layout_alignParentStart="true"
+                android:layout_centerInParent="true"
                 android:background="@android:color/transparent"
                 android:gravity="center_vertical"
                 android:padding="10dp"
-                android:src="@drawable/food_placeholder"
-                android:layout_alignParentStart="true"
-                android:layout_centerInParent="true" />
+                android:src="@drawable/food_placeholder" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -288,17 +281,14 @@
                 android:gravity="center"
                 android:layout_centerInParent="true">
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnPickImage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:gravity="center"
-                    android:text="Pick Image"
-                    android:textColor="@color/white"
-                    android:background="@drawable/circle"
                     android:backgroundTint="@color/myColor"
-                    style="@style/Widget.MaterialComponents.Button"/>
+                    app:cornerRadius="50dp"
+                    android:text="Pick Image"
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
@@ -314,18 +304,18 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnDone"
-                android:layout_width="0dp"
-                android:layout_height="55dp"
-                android:layout_weight="1"
-                android:layout_marginTop="40dp"
-                android:foreground="?attr/selectableItemBackground"
                 style="@style/Widget.MaterialComponents.Button"
-                android:text="@string/done"
-                android:textSize="16sp"
-                android:background="@drawable/circle"
+                android:foreground="?attr/selectableItemBackground"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="40dp"
+                android:layout_weight="1"
                 android:backgroundTint="@color/myColor"
+                app:cornerRadius="50dp"
+                android:text="@string/done"
+                android:textSize="14sp"
                 android:textColor="@color/white" />
 
         </LinearLayout>
