--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -204,16 +204,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view2" />
 
-        <ImageButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/ibChat"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="25dp"
-            android:layout_marginVertical="45dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/chat_icon"
-            android:background="@android:color/transparent"
-            style="@style/Widget.AppCompat.Button"
+            android:layout_marginVertical="75dp"
+            android:src="@drawable/chat_fab"
+            app:fabSize="mini"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:contentDescription="Chat" />
