--- a/app/src/main/res/drawable/background_messages.xml
+++ b/app/src/main/res/drawable/background_messages.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="8dp" />
+    <corners android:radius="10dp" />
 
     <solid android:color="@color/white" />
 
-    <gradient android:startColor="@color/myColor" android:endColor="@color/myColorSecond"/>
+<!--    <gradient android:startColor="@color/white" android:endColor="@color/white"/>-->
 
 </shape>
