--- a/app/src/main/res/layout/chat_item_adapter_layout_left.xml
+++ b/app/src/main/res/layout/chat_item_adapter_layout_left.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -17,29 +18,31 @@
             android:layout_marginStart="-2dp"
             android:layout_marginTop="-1dp"
             android:layout_alignParentStart="true"
-            android:src="@drawable/mssg_pin_left" />
+            android:src="@drawable/mssg_pin_left"
+            app:tint="@color/myColor" />
 
         <RelativeLayout
             android:layout_width="270dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginStart="8dp"
+            android:backgroundTint="@color/myColor"
             android:background="@drawable/background_messages">
 
             <TextView
                 android:id="@+id/tvMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Hello!"
-                android:fontFamily="@font/poppins_medium"
                 android:layout_alignParentEnd="true"
+                android:fontFamily="@font/poppins_medium"
                 android:gravity="start"
-                android:textSize="14dp"
-                android:textColor="@color/white"
-                android:paddingTop="10dp"
+                android:includeFontPadding="false"
                 android:paddingStart="10dp"
+                android:paddingTop="10dp"
                 android:paddingEnd="10dp"
-                android:includeFontPadding="false" />
+                android:text="Hello!"
+                android:textColor="@color/white"
+                android:textSize="14dp" />
 
             <TextView
                 android:id="@+id/tvTime"
