--- a/app/src/main/res/layout/chat_item_adapter_layout_right.xml
+++ b/app/src/main/res/layout/chat_item_adapter_layout_right.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -17,7 +18,8 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="-1dp"
             android:layout_marginEnd="-5dp"
-            android:src="@drawable/mssg_pin_right" />
+            android:src="@drawable/mssg_pin_right"
+            app:tint="@color/white" />
 
         <RelativeLayout
             android:layout_width="270dp"
@@ -30,16 +32,16 @@
                 android:id="@+id/tvMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Hello!"
-                android:fontFamily="@font/poppins_medium"
                 android:layout_alignParentEnd="true"
+                android:fontFamily="@font/poppins_medium"
                 android:gravity="start"
-                android:textSize="14dp"
-                android:textColor="@color/white"
-                android:paddingTop="10dp"
+                android:includeFontPadding="false"
                 android:paddingStart="10dp"
+                android:paddingTop="10dp"
                 android:paddingEnd="10dp"
-                android:includeFontPadding="false" />
+                android:text="Hello!"
+                android:textColor="@color/black"
+                android:textSize="14dp" />
 
             <TextView
                 android:id="@+id/tvTime"
@@ -49,12 +51,12 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="5dp"
-                android:text="Time!"
                 android:gravity="bottom"
-                android:textSize="12dp"
                 android:includeFontPadding="false"
-                android:textStyle="bold"
-                android:textColor="@color/white" />
+                android:text="Time!"
+                android:textColor="@color/black"
+                android:textSize="12dp"
+                android:textStyle="bold" />
 
         </RelativeLayout>
 
