--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -124,9 +124,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:hint="@string/description"
-                    android:inputType="text"
                     android:padding="10dp"
-                    android:singleLine="true"
                     android:textSize="16sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -350,7 +348,7 @@
                     android:background="@android:color/transparent"
                     android:gravity="center_vertical"
                     android:padding="10dp"
-                    android:src="@drawable/food_placeholder" />
+                    android:src="@drawable/main_course" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
