--- a/app/src/main/res/layout/activity_item_properties.xml
+++ b/app/src/main/res/layout/activity_item_properties.xml
@@ -272,7 +272,7 @@
                 android:background="@android:color/transparent"
                 android:gravity="center_vertical"
                 android:padding="10dp"
-                android:src="@drawable/food_placeholder" />
+                android:src="@drawable/main_course" />
 
             <LinearLayout
                 android:layout_width="match_parent"
