--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -177,9 +177,9 @@
                     android:layout_centerVertical="true"
                     android:layout_marginStart="10dp"
                     android:text="Available: "
-                    android:textStyle="bold"
                     android:textColor="@color/black"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tvAvailable"
@@ -213,6 +213,62 @@
                     android:layout_marginEnd="10dp" />
 
             </RelativeLayout>
+
+<!--            <View-->
+<!--                android:layout_width="fill_parent"-->
+<!--                android:layout_height="1px"-->
+<!--                android:background="@color/myColor" />-->
+
+<!--            <RelativeLayout-->
+<!--                android:id="@+id/layout1"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/toolbar">-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/tvDODPlace"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_centerVertical="true"-->
+<!--                    android:layout_marginStart="10dp"-->
+<!--                    android:text="Deal of the day: "-->
+<!--                    android:textColor="@color/black"-->
+<!--                    android:textSize="16sp"-->
+<!--                    android:textStyle="bold" />-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/tvDODAvailable"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_centerVertical="true"-->
+<!--                    android:layout_toEndOf="@+id/tvDODPlace"-->
+<!--                    android:layout_marginStart="10dp"-->
+<!--                    android:text="Yes"-->
+<!--                    android:textColor="@color/black"-->
+<!--                    android:textSize="16sp"-->
+<!--                    android:visibility="gone" />-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/tvDODNotAvailable"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_centerVertical="true"-->
+<!--                    android:layout_toEndOf="@+id/tvDODPlace"-->
+<!--                    android:layout_marginStart="10dp"-->
+<!--                    android:text="No"-->
+<!--                    android:textColor="@color/black"-->
+<!--                    android:textSize="16sp"-->
+<!--                    android:visibility="visible" />-->
+
+<!--                <com.google.android.material.switchmaterial.SwitchMaterial-->
+<!--                    android:id="@+id/switchDODAvailable"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="40dp"-->
+<!--                    android:layout_alignParentEnd="true"-->
+<!--                    android:layout_marginEnd="10dp" />-->
+
+<!--            </RelativeLayout>-->
 
             <View
                 android:layout_width="fill_parent"
