--- a/app/src/main/res/layout/items_activity_adapter_layout.xml
+++ b/app/src/main/res/layout/items_activity_adapter_layout.xml
@@ -27,8 +27,9 @@
                     android:id="@+id/ivItem"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
-                    android:padding="10dp"
                     android:elevation="8dp"
+                    android:padding="10dp"
+                    android:layout_centerVertical="true"
                     android:src="@drawable/main_course" />
 
                 <TextView
@@ -62,13 +63,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvItem"
-                    android:layout_toEndOf="@+id/ivItem"
-                    android:layout_marginTop="5dp"
                     android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="50dp"
-                    android:maxLines="3"
+                    android:layout_toEndOf="@+id/ivItem"
                     android:fontFamily="@font/montserra_regular"
-                    android:text="Description Description Description Description Description Description Description Description Description Description "
+                    android:maxLines="2"
+                    android:text="Description Description Description Description Description Description "
                     android:textColor="@android:color/black"
                     android:textSize="12sp" />
 
@@ -76,15 +77,26 @@
                     android:id="@+id/tvItemSchedule"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/ivItem"
+                    android:layout_below="@+id/tvItemDescription"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
-                    android:layout_below="@+id/tvItemDescription"
                     android:layout_marginEnd="10dp"
+                    android:layout_toEndOf="@+id/ivItem"
                     android:fontFamily="@font/montserra_regular_bold"
                     android:text="Availability"
                     android:textColor="@color/myColor"
                     android:textSize="12sp" />
+
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/cbDOD"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvItemSchedule"
+                    android:layout_alignParentEnd="true"
+                    android:layoutDirection="rtl"
+                    android:text="Deal of the day"
+                    android:fontFamily="@font/montserra_regular_bold"
+                    android:textSize="14sp"/>
 
             </RelativeLayout>
 
