--- a/app/src/main/res/layout/recent_orders_adapter_layout.xml
+++ b/app/src/main/res/layout/recent_orders_adapter_layout.xml
@@ -30,19 +30,39 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/tvResNameOrders"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginStart="10dp"
-                        android:layout_gravity="left|center_vertical"
-                        android:text="Order ID"
-                        android:textColor="@color/black"
-                        android:textSize="14sp"
-                        android:letterSpacing="0.06"
-                        android:textStyle="bold"
-                        android:fontFamily="@font/montserra_regular" />
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tvResNameOrders"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:gravity="start"
+                            android:layout_gravity="center_vertical"
+                            android:text="Order ID"
+                            android:textColor="@color/black"
+                            android:textSize="14sp"
+                            android:letterSpacing="0.06"
+                            android:textStyle="bold"
+                            android:fontFamily="@font/montserra_regular" />
+
+                        <TextView
+                            android:id="@+id/tvScheduled"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:gravity="end"
+                            android:text="Sceduled"
+                            android:textColor="@color/rejected"
+                            android:textSize="10sp"
+                            android:letterSpacing="0.06"
+                            android:textStyle="bold"
+                            android:fontFamily="@font/montserra_regular" />
+
+                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -71,6 +91,43 @@
                             android:layout_marginEnd="5dp"
                             android:gravity="end"
                             android:text="Total Price"
+                            android:textColor="@color/black"
+                            android:textSize="12sp"
+                            android:letterSpacing="0.06"
+                            android:textStyle="bold"
+                            android:fontFamily="@font/montserra_regular" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/scheduleLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_gravity="center_vertical">
+
+                        <TextView
+                            android:id="@+id/tvScheduleDatePlace"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginStart="10dp"
+                            android:gravity="start"
+                            android:text="Schedule Date"
+                            android:textColor="@color/black"
+                            android:textSize="12sp"
+                            android:letterSpacing="0.06"
+                            android:textStyle="bold"
+                            android:fontFamily="@font/montserra_regular" />
+
+                        <TextView
+                            android:id="@+id/tvScheduleDate"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginEnd="5dp"
+                            android:gravity="end"
+                            android:text=""
                             android:textColor="@color/black"
                             android:textSize="12sp"
                             android:letterSpacing="0.06"
