--- a/app/src/main/res/layout/items_activity_adapter_layout.xml
+++ b/app/src/main/res/layout/items_activity_adapter_layout.xml
@@ -104,8 +104,8 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvItemSchedule"
                     android:layout_marginStart="10dp"
-                    android:layout_toEndOf="@+id/ivItem"
                     android:layout_toStartOf="@+id/cbDOD"
+                    android:layout_toEndOf="@+id/ivItem"
                     android:fontFamily="@font/montserra_regular_bold"
                     android:layoutDirection="rtl"
                     android:text="Up for grab"
@@ -116,7 +116,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/cbUFG"
-                    android:layout_centerHorizontal="true"
+                    android:layout_toStartOf="@+id/cbDOD"
+                    android:gravity="center_horizontal"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="5dp"
                     android:layout_toEndOf="@+id/ivItem"
