--- a/app/src/main/res/layout/edit_details.xml
+++ b/app/src/main/res/layout/edit_details.xml
@@ -30,7 +30,8 @@
             <EditText
                 android:id="@+id/editText"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
