--- a/app/src/main/res/layout/in_progress_orders_adapter_layout.xml
+++ b/app/src/main/res/layout/in_progress_orders_adapter_layout.xml
@@ -55,7 +55,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="5dp"
                             android:gravity="end"
-                            android:text="Sceduled"
+                            android:text="Scheduled"
                             android:textColor="@color/rejected"
                             android:textSize="10sp"
                             android:letterSpacing="0.06"
